[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/main_font_s.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/level/tier_ratio_sign/tier_ratio_sign.gd" type="Script" id=2]
[ext_resource path="res://src/level/tier_ratio_sign/torch.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/signs/tier-ratio-sign.png" type="Texture" id=4]
[ext_resource path="res://src/level/todo_sign.tscn" type="PackedScene" id=5]

[node name="TierRatioSign" type="Node2D"]
script = ExtResource( 2 )

[node name="TierIdSign" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( -39.3306, -104 )

[node name="Sign" type="Sprite" parent="."]
light_mask = 4
position = Vector2( 0, -18 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
light_mask = 4
margin_left = -24.0
margin_top = -38.0
margin_right = 24.0
margin_bottom = -15.0
rect_min_size = Vector2( 48, 23 )
custom_fonts/font = ExtResource( 1 )
text = "0 / 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftTorch" parent="." instance=ExtResource( 3 )]
light_mask = 4
position = Vector2( 36, -24 )
is_lit = false

[node name="RightTorch" parent="." instance=ExtResource( 3 )]
light_mask = 4
position = Vector2( -36, -24 )
is_lit = false
